feat: add pattern trait, ripple effect and current-limited brightness
Introduce a `Pattern` trait outputting RGB8 buffers, with `RainbowCycle`
and `RippleEffect` implementations. Ripple spawns expanding ring
particles with random hues on a deep navy background using a ring
topology wrap-distance model.

Add shared `LedState` (brightness + flight mode) via embassy-sync mutex,
and current-limited brightness clamping (8 mA/channel, 2A budget) that
scales brightness down proportionally when estimated strip current
exceeds the limit.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ critical-section = "1.2.0"
 embassy-executor = { version = "0.9.1", features = [
   "defmt",
 ] }
+embassy-sync = "0.7.2"
 embassy-time = { version = "0.5.0", features = ["generic-queue-8"] }
 esp-rtos = { version = "0.2.0", features = [
   "embassy",
