--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,15 +64,15 @@ esp-radio = { version = "0.17.0", features = [
 ] }
 heapless = { version = "0.8.0", default-features = false }
 static_cell = { version = "2.1.0", features = ["nightly"] }
-esp-hal-smartled2 = { version = "*", features = ["esp32c3"] }
 smart-leds = "0.4.0"
+ws2812-spi = "0.5.1"
 esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
 edge-dhcp = { version = "0.7.0", features = ["io", "defmt"] }
 
 [profile.dev]
 # Rust debug is too slow.
 # For debug builds always builds with some optimization
-opt-level = "s"
+opt-level = 3
 
 [profile.release]
 codegen-units    = 1     # LLVM can perform better optimizations using a single thread
@@ -80,5 +80,5 @@ debug            = 2
 debug-assertions = false
 incremental      = false
 lto              = 'fat'
-opt-level        = 's'
+opt-level        = 3
 overflow-checks  = false
