--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,7 +62,10 @@ esp-radio = { version = "0.17.0", features = [
   "wifi",
   "unstable",
 ] }
-heapless = { version = "0.8.0", default-features = false }
+heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
+serde = { version = "1.0", default-features = false, features = ["derive"] }
+futures = { version = "0.3", default-features = false, features = ["async-await"] }
+serde-json-core = { version = "0.6", features = ["heapless"] }
 static_cell = { version = "2.1.0", features = ["nightly"] }
 smart-leds = "0.4.0"
 ws2812-spi = "0.5.1"
